--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,7 @@ pyo3 = { version = "0.21.2", features = [
 ] }
 
 [patch.crates-io]
-
 numpy = { git = "https://github.com/VladGTT/rust-numpy.git" }
+
+[dev-dependencies]
+assert_float_eq = "1.1.3"
