--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+/temp
 /.Python
 /.venv
 /.env
@@ -73,5 +74,3 @@ docs/_build/
 # Pyenv
 .python-version
 
-# Excel
-*.xlsx
