--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ ndarray = { version = "0.16.1", features = ["rayon"] }
 pyo3 = { version = "0.22.4", features = ["extension-module"] }
 itertools = "0.13.0"
 ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
+rayon = "1.10.0"
 
 [patch.crates-io]
 ndarray-linalg = { git = "https://github.com/VladGTT/ndarray-linalg.git" }
